src/test/ui/consts/const_short_circuit.stderr
error: new features like let bindings are not permitted in constants which also use short circuiting operators
  --> $DIR/const_short_circuit.rs:6:9
   |
LL |     let mut x = true && false;
   |         ^^^^^
   |
note: use of `&&` operator here
  --> $DIR/const_short_circuit.rs:6:22
   |
LL |     let mut x = true && false;
   |                      ^^

error: new features like let bindings are not permitted in constants which also use short circuiting operators
  --> $DIR/const_short_circuit.rs:11:9
   |
LL |     let x = true && false;
   |         ^
   |
note: use of `&&` operator here
  --> $DIR/const_short_circuit.rs:11:18
   |
LL |     let x = true && false;
   |                  ^^

error: aborting due to 2 previous errors

